// Author: Kun Ren <kun@cs.yale.edu>
//
syntax = "proto2";
message MicrobenchmarkAction {  // Actually a namespace!

// Types of actions that KVStore can interpret.
enum Type {
  EXECUTE = 0;
};

/////////////////////////
// EXECUTE
message ExecuteInput {
  repeated bytes keys = 1;
}
// (no output type)

}  // message MicrobenchmarkAction
